# joint_test

./: .gitignore  Dockerfile  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0248b2debcb9_create_users_table.py
app/: main.py
app/core/: config.py  db.py
app/domains/users/: router.py
app/models/: users.py
nginx/: nginx.conf
nginx/conf.d/: default.conf
